--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.3.1",
     "js-marker-clusterer": "^1.0.0",
     "ng2-opd-popup": "^1.1.21",
+    "npm": "^6.4.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
