--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng2-opd-popup": "^1.1.21",
     "npm": "^6.4.1",
     "rxjs": "~6.2.0",
+    "typescript-map": "0.0.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
