--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -32,6 +34,7 @@
     "ng2-opd-popup": "^1.1.21",
     "npm": "^6.4.1",
     "rxjs": "~6.2.0",
+    "save": "^2.3.3",
     "typescript-map": "0.0.6",
     "zone.js": "~0.8.26"
   },
