--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "js-marker-clusterer": "^1.0.0",
+    "ng-sweet-alert": "^1.0.11",
     "ng2-opd-popup": "^1.1.21",
+    "ng2-sweetalert2": "0.0.8",
     "npm": "^6.4.1",
     "rxjs": "~6.2.0",
     "save": "^2.3.3",
